Support array submission with root workflow (#3062)
* Support array submission with root workflow
